--- a/build.gradle
+++ b/build.gradle
@@ -8,6 +8,7 @@
 buildscript{
     ext {
         spring = "2.4.1"
+        // spring boot의 group id를 자주 쓰기 때문에 변수로 지정
         boot = "org.springframework.boot"
         lombok = "org.projectlombok:lombok"
     }
@@ -15,6 +16,7 @@ buildscript{
         mavenCentral()
     }
     dependencies {
+        // spring boot를 gradle로 build할 때 사용하는 라이브러리
         classpath("$boot:spring-boot-gradle-plugin:$spring")
     }
 }
